SERVER-30620 Lookup collection by UUID in fetchAndInsertMissingDocument